// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph Query Planner language plans basic queries 1`] = `
QueryAST {
  "head": MatchNode {
    "algorithm": "search",
    "children": Array [],
    "nodeFilters": Object {
      "type": "person",
    },
  },
}
`;

exports[`Graph Query Planner language plans basic queries to traverse nodes 1`] = `
QueryAST {
  "head": MatchNode {
    "algorithm": "search",
    "children": Array [
      TraversalNode {
        "algorithm": "bfs",
        "children": Array [],
        "edgeFilters": Array [
          "friends",
        ],
      },
    ],
    "nodeFilters": Object {
      "type": "person",
    },
  },
}
`;
